<resources>
    <string name="app_name">Movie Card Application</string>
    <string name="movie_genre_text">Боевики</string>
    <string name="movie_genre_2">Драмы</string>
    <string name="movie_genre_3">Комедии</string>
    <string name="movie_date">22.04.2021</string>
    <string name="movie_title">Гнев человеческий</string>
    <string name="age_limit">18+</string>
    <string name="movie_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="actors_title">Актёры</string>
    <string name="actors_name_1">Джейсон Стэйтем</string>
    <string name="actors_name_2">Холт Маккэллани</string>
    <string name="actors_name_3">Джош Хартнетт</string>
    <string name="main_rating_text">Рейтинг: %1$d</string>
    <string name="main_age_restriction_text">%1$d+</string>
    <string name="main_click_message">Название: %1$s</string>
    <string name="main_empty_message">Тут должен был быть текст</string>
    <string name="tools_text_movie_title">Фильм-фильм-фильм</string>
    <string name="tools_text_movie_description">Кстати, многие известные личности освещают чрезвычайно интересные особенности картины в целом, однако конкретные выводы, разумеется, подвергнуты целой серии независимых исследований.</string>
    <string name="tools_text_movie_rating">4</string>
    <string name="tools_text_movie_age_description">18+</string>
    <string name="tools_movie_genre">Боевик</string>
    <string name="popular">Популярное сейчас</string>
    <string name="account_name">Alexander</string>
    <string name="account_email">mail@ru</string>
    <string name="account_interests">Интересы</string>
    <string name="account_private_data">Личные данные</string>
    <string name="account_name_title_data">Введите имя</string>
    <string name="account_surname_title_data">Введите фамилию</string>
    <string name="account_password_title_data">Введите пароль</string>
    <string name="account_email_title_data">Введите e-mail</string>
    <string name="account_telephone_title_data">Введите телефон</string>
    <string name="account_edit_name">*</string>
    <string name="account_edit_password">*</string>
    <string name="account_edit_email">*</string>
    <string name="account_edit_telephone">8-</string>
    <string name="account_settings">Настройки</string>
    <string name="account_settings_sound">Уведомления и звуки</string>
    <string name="account_private_policy">Конфиденциальность</string>
    <string name="account_theme">Тема</string>
    <string name="account_language">Язык</string>
    <string name="account_data_memory">Данные и память</string>
    <string name="account_application">Приложение</string>
    <string name="account_question">Задать вопрос</string>
    <string name="account_problem">Сообщить о проблеме</string>
    <string name="account_exit_button">Сохранить и выйтиВыйти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>