<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="64dp"
                android:text="@string/account_name"
                android:textAppearance="@style/profile_name_style"
                app:layout_constraintBottom_toTopOf="@id/account_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/profile_avatar"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="48dp"
                android:background="@mipmap/account_avatar"
                android:src="@drawable/ic_account_smile_avatar"

                android:layout_marginEnd="@dimen/main_side_offset_20"/>

            <TextView
                android:id="@+id/account_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="2dp"
                android:text="@string/account_email"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_name" />

            <TextView
                android:id="@+id/account_interests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="56dp"
                android:text="@string/account_interests"
                android:textAppearance="@style/profile_data_16_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_email" />

            <HorizontalScrollView
                android:id="@+id/account_genre_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginEnd="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_interests">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/movie_genre_1"
                    android:layout_width="@dimen/main_side_offset_80"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_movie_genre_frame"
                    android:gravity="center"
                    android:textAppearance="@style/movie_genre_style"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="@dimen/main_side_offset_15"
                    android:text="@string/tools_movie_genre" />

                <TextView
                    android:id="@+id/movie_genre_2"
                    android:layout_width="@dimen/main_side_offset_80"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_movie_genre_frame"
                    android:gravity="center"
                    android:textAppearance="@style/movie_genre_style"
                    app:layout_constraintStart_toEndOf="@+id/movie_genre_1"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="@dimen/main_side_offset_15"
                    android:text="@string/movie_genre_2" />

                <TextView
                    android:id="@+id/movie_genre_3"
                    android:layout_width="@dimen/main_side_offset_80"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_movie_genre_frame"
                    android:gravity="center"
                    android:textAppearance="@style/movie_genre_style"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/movie_genre_3" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/account_private_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="40dp"
                android:text="@string/account_private_data"
                android:textAppearance="@style/profile_data_16_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_genre_title" />

            <TextView
                android:id="@+id/account_name_title_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_15"
                android:text="@string/account_name_title_data"
                android:textAppearance="@style/profile_name_title_data_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_private_data" />

            <EditText
                android:id="@+id/account_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginEnd="@dimen/main_side_offset_20"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_name_title_data"
                app:layout_goneMarginStart="@dimen/main_side_offset_20" />

            <TextView
                android:id="@+id/account_surname_title_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_15"
                android:text="@string/account_surname_title_data"
                android:textAppearance="@style/profile_name_title_data_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_edit_name" />

            <EditText
                android:id="@+id/account_edit_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginEnd="@dimen/main_side_offset_20"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_surname_title_data"
                app:layout_goneMarginStart="@dimen/main_side_offset_20" />

            <TextView
                android:id="@+id/account_password_title_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_15"
                android:text="@string/account_password_title_data"
                android:textAppearance="@style/profile_name_title_data_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_edit_surname" />

            <EditText
                android:id="@+id/account_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginEnd="@dimen/main_side_offset_20"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_password_title_data"
                app:layout_goneMarginStart="@dimen/main_side_offset_20" />

            <TextView
                android:id="@+id/account_email_title_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_15"
                android:text="@string/account_email_title_data"
                android:textAppearance="@style/profile_name_title_data_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_edit_password" />

            <EditText
                android:id="@+id/account_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginEnd="@dimen/main_side_offset_20"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_email_title_data"
                app:layout_goneMarginStart="@dimen/main_side_offset_20" />

            <TextView
                android:id="@+id/account_telephone_title_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_15"
                android:text="@string/account_telephone_title_data"
                android:textAppearance="@style/profile_name_title_data_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_edit_email" />

            <EditText
                android:id="@+id/account_edit_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginEnd="@dimen/main_side_offset_20"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_telephone_title_data"
                app:layout_goneMarginStart="@dimen/main_side_offset_20" />

            <TextView
                android:id="@+id/account_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="40dp"
                android:text="@string/account_settings"
                android:textAppearance="@style/profile_data_16_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_edit_telephone" />

            <TextView
                android:id="@+id/account_settings_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_10"
                android:text="@string/account_settings_sound"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_settings" />

            <TextView
                android:id="@+id/account_private_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_20"
                android:text="@string/account_private_policy"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_settings_sound" />

            <TextView
                android:id="@+id/account_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_20"
                android:text="@string/account_theme"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_private_policy" />

            <TextView
                android:id="@+id/account_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_20"
                android:text="@string/account_language"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_theme" />

            <TextView
                android:id="@+id/account_data_memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_20"
                android:text="@string/account_data_memory"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_language" />

            <TextView
                android:id="@+id/account_application"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="40dp"
                android:text="@string/account_application"
                android:textAppearance="@style/profile_data_16_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_data_memory" />

            <TextView
                android:id="@+id/account_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_10"
                android:text="@string/account_question"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_application" />

            <TextView
                android:id="@+id/account_problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginTop="@dimen/main_side_offset_20"
                android:text="@string/account_problem"
                android:textAppearance="@style/profile_data_14_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_question" />

            <Button
                android:id="@+id/account_exit_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/main_side_offset_20"
                android:layout_marginEnd="@dimen/main_side_offset_20"
                android:layout_marginTop="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/gray"
                android:text="@string/account_exit_button"
                android:textAppearance="@style/profile_data_16_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_problem" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/list_bottom_navigation_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:itemBackground="@drawable/tab_color"
        app:itemIconTint="@drawable/tab_icon_color"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/list_bottom_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>